hphp/test/zend/good/ext/exif/tests/exif009.php
<?php
var_dump(exif_read_data(dirname(__FILE__).'/image009.jpg'));
?>