hphp/test/zend/bad/ext-gd/libgd00086.php
<?php

$im = imagecreatefrompng(dirname(__FILE__) . '/libgd00086.png');
var_dump($im);
?>